feat: 디자인시스템 변경 컴포넌트 개발 (#1189)
* chore: ImageModal displayName 추가

* feat: shadow5, shadow6 추가

* feat: Toast 여백 변경, 버튼 스타일 고정

* feat: EmptyBox illust 추가

* feat: EmptyBox 기본값 변경

* feat: IconRating - large size 추가

* feat: RatingButton - large size 추가

* feat: File 관련 컴포넌트 리디자인, error 추가

* feat: Tooltip, Popover color 추가(black)

* feat: BasicModal에 secondary button 추가

* feat: ImageModal 여백 변경

* feat: Modal 컴포넌트 상단 여백 변경

* feat: Reply 리디자인

* feat:아이콘 이미지 파일 변경

* chore: userInformation 폴더구조 변경

* feat: ProfileWithText 디자인시스템에서 제거

* feat: Content 디자인시스템에서 제거

* feat: Reply 스토리 구조 변경

* feat: userInformation 여백 제거

* chore: 사용하지 않는 스토리 예시 제거

--- a/stories/components/dataDisplay/UserInformation.stories.mdx
+++ b/stories/components/dataDisplay/UserInformation.stories.mdx
@@ -1,10 +1,9 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import UserInformation, { userInformationTypes } from '@/components/content/UserInformation';
-import UserInformationName from "@/components/content/UserInformationName";
-import UserInformationCaption from "@/components/content/UserInformationCaption";
-import UserInformationChipGroup from "@/components/content/UserInformationChipGroup";
-import UserInformationCompany from "@/components/content/UserInformationCompany";
-import Content from '@/components/content/Content';
+import UserInformation, { userInformationTypes } from '@/components/userInformation/UserInformation';
+import UserInformationName from "@/components/userInformation/UserInformationName";
+import UserInformationCaption from "@/components/userInformation/UserInformationCaption";
+import UserInformationChipGroup from "@/components/userInformation/UserInformationChipGroup";
+import UserInformationCompany from "@/components/userInformation/UserInformationCompany";
 import Icon from '@/components/icon/Icon';
 import Avatar from '@/components/avatar/Avatar.vue';
 import ChipGroup from '@/components/chips/ChipGroup';
@@ -12,7 +11,7 @@ import Chip from '@/components/chips/Chip';
 import Divider from '@/components/divider/Divider.vue';
 
 <Meta
-    title="Data Display/Content/UserInformation"
+    title="Data Display/UserInformation"
     component={ UserInformation }
     argTypes={{
         type: {
@@ -39,7 +38,7 @@ import Divider from '@/components/divider/Divider.vue';
 
 export const Basic = (args, { argTypes }) => ({
     props: Object.keys(argTypes),
-    components: { UserInformation, Content, Avatar, Icon, ChipGroup, Chip, UserInformationName, UserInformationCompany, UserInformationCaption, UserInformationChipGroup },
+    components: { UserInformation, Avatar, Icon, ChipGroup, Chip, UserInformationName, UserInformationCompany, UserInformationCaption, UserInformationChipGroup },
     data() {
         return {
             matchedItems: ['회사', '산업', '직무', '학교'],
@@ -135,7 +134,7 @@ export const Basic = (args, { argTypes }) => ({
             template: `
               <div>
               <template v-for="({ name, company, matchedItems, size, type }, index) in sampleItems">
-                <UserInformation :type="type" :key="'user-information' + index">
+                <UserInformation :type="type" :key="'user-information' + index" class="mb-30">
                   <template v-slot:avatar>
                     <Avatar type="nickname" :text="name.substr(0, 1)" :size="size"/>
                   </template>
@@ -169,40 +168,7 @@ export const Basic = (args, { argTypes }) => ({
                     </template>
                   </template>
                 </UserInformation>
-                <Divider :key="'divider' + index" class="my-8" />
               </template>
-              <UserInformation type="simple">
-                <template v-slot:avatar>
-                  <Avatar type="profile" size="xsmall"/>
-                </template>
-                <template v-slot:name>
-                  <UserInformationName>
-                    질문자
-                  </UserInformationName>
-                </template>
-              </UserInformation>
-              <Divider class="my-8" />
-              <UserInformation type="normal">
-                <template v-slot:avatar>
-                  <Avatar type="profile" size="small"/>
-                </template>
-                <template v-slot:name>
-                  <UserInformationName>
-                    질문자
-                  </UserInformationName>
-                </template>
-              </UserInformation>
-              <Divider class="my-8" />
-              <UserInformation type="full">
-                <template v-slot:avatar>
-                  <Avatar type="profile" size="medium"/>
-                </template>
-                <template v-slot:name>
-                  <UserInformationName>
-                    질문자
-                  </UserInformationName>
-                </template>
-              </UserInformation>
               </div>
             `,
             components: { UserInformation, Icon, ChipGroup, Chip, Avatar, Divider, UserInformationName, UserInformationCaption, UserInformationChipGroup, UserInformationCompany },
