--- a/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
+++ b/stories/components/dataDisplay/list/fileList/FileList.stories.mdx
@@ -1,8 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
-import FileList from '@/components/list/fileList/FileList';
-import FileInput from "@/components/input/FileInput";
-import FileSummary from '@/components/list/fileList/FileSummary';
-import Divider from '@/components/divider/Divider.vue';
+import FileList from '@/components/list/fileList/FileList.vue';
+import FileInput from "@/components/input/FileInput.vue";
+import FileSummary from '@/components/list/fileList/FileSummary.vue';
+import FileItem from '@/components/list/fileList/FileItem.vue';
 
 <Meta
   title="Data Display/List/FileList"
@@ -12,13 +12,13 @@ import Divider from '@/components/divider/Divider.vue';
       description: "파일 리스트",
       defaultValue: [
         {
-          file: { name: "1.png"}, isLoading: false
+          file: { name: "1.png"}, isLoading: false, isError: false,
         },
         {
-          file: { name: "2.png"}, isLoading: false
+          file: { name: "2.png"}, isLoading: false, isError: false,
         },
         {
-          file: { name: "3.png"}, isLoading: false
+          file: { name: "3.png"}, isLoading: false, isError: false,
         },
       ],
       control: {
@@ -67,17 +67,24 @@ export const Default = (args, { argTypes }) => ({
                 <div :style="full ? 'width: 100%' : ''">
                  <FileInput v-if="isRemovable" @uploadFiles="handleUploadFiles"/>
                  <FileSummary v-else :full="full" :length="filesData.length" />
-                 <FileList :files="filesData"
-                    :is-removable="isRemovable"
-                    :full="full"
-                    @clickFileDownloadIcon="handleClickFileDownloadIcon"
-                    @clickFileItem="handleClickFileItem"
-                    @clickFileItemContent="handleClickFileItem"
-                    @clickFileTrashIcon="handleClickFileTrashIcon"
-                 />
+                 <FileList :full="full">
+					<template v-for="(item, index) in filesData" :key="'file-' + index">
+						<FileItem
+							:file="item.file"
+							:index="index"
+							:is-removable="isRemovable"
+							:is-loading="item.isLoading"
+							:is-error="item.isError"
+							@clickFileDownloadIcon="handleClickFileDownloadIcon"
+							@clickFileItem="handleClickFileItem"
+							@clickFileItemContent="handleClickFileItem"
+							@clickFileTrashIcon="handleClickFileTrashIcon"
+						/>
+					</template>
+				</FileList>
                 </div>
              </div>`,
-   components: { FileList, FileSummary, FileInput },
+   components: { FileList, FileSummary, FileInput, FileItem },
 });
 
 # FileList
