--- a/stories/components/dataEntry/fileInput/FileInputButton.stories.mdx
+++ b/stories/components/dataEntry/fileInput/FileInputButton.stories.mdx
@@ -2,7 +2,7 @@ import { ArgsTable, Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 import FileInputButton from '@/components/fileInput/FileInputButton.vue';
 import FileInputList from '@/components/fileInput/FileInputList.vue';
 import Typography from '@/components/typography/Typography.vue';
-import FileSummary from '@/components/fileInput/FileSummary.vue';
+import FileSummary from './FileSummary.vue';
 
 <Meta
   title="Data Entry/FileInput/FileInputButton"
@@ -176,7 +176,9 @@ export const Default = (args, { argTypes }) => ({
                         </div>
                          <div style="width: 100%; margin-bottom: 30px;">
                             <Typography type="body2">완료</Typography>
-                            <FileSummary :length="mockFiles.length" @clickAllFileDownloadButton="handleClickAllFileDownloadButton"/>
+                            <FileSummary show-download-button @clickAllFileDownloadButton="handleClickAllFileDownloadButton">
+								첨부파일 ({{ mockFiles.length }}개)
+							</FileSummary>
                             <FileInputList :files="mockFiles" @clickFileDownloadIcon="handleClickMockFileDownloadIcon" @clickFileItemContent="handleClickFileItemContent"/>
                         </div>
                       </div>`,
